# ts_observing

./: .gitignore  .pre-commit-config.yaml  Jenkinsfile  README.rst  SConstruct  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yaml  docstyle.yaml
conda/: meta.yaml
doc/: conf.py  index.rst  manifest.yaml  version_history.rst
python/lsst/ts/observing/: __init__.py  block.py
tests/: test_observing_block.py
